crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__empty_function.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        pub fn run() {}\n    "
info: empty_function
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Trace {
                    kind: Todo,
                    location: 0..15,
                    then: ErrorTerm {
                        location: 0..15,
                    },
                    text: String {
                        location: 0..15,
                        value: "aiken::todo",
                    },
                },
                doc: None,
                location: 0..12,
                name: "run",
                public: true,
                return_annotation: None,
                return_type: (),
                end_position: 14,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
