crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__fail.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n       !test invalid_inputs() {\n         expect True = False\n\n         False\n       }\n    "
info: test_fail
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Test(
            Function {
                arguments: [],
                body: Sequence {
                    location: 27..55,
                    expressions: [
                        Assignment {
                            location: 27..46,
                            value: Var {
                                location: 41..46,
                                name: "False",
                            },
                            pattern: Constructor {
                                is_record: false,
                                location: 34..38,
                                name: "True",
                                arguments: [],
                                module: None,
                                constructor: (),
                                with_spread: false,
                                tipo: (),
                            },
                            kind: Expect,
                            annotation: None,
                        },
                        Var {
                            location: 50..55,
                            name: "False",
                        },
                    ],
                },
                doc: None,
                location: 0..22,
                name: "invalid_inputs",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 56,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
